--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /vendor
 .env
 .env.backup
+.env.local
 .env.production
 .phpunit.result.cache
 Homestead.json
@@ -16,3 +17,6 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/mysql
+.php-cs-fixer.cache
+.DS_Store
