--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
+        "prettier": "2.8.4",
+        "sass": "^1.58.3",
         "tailwindcss": "^3.2.4",
         "vite": "^4.0.0"
     },
@@ -17,6 +20,7 @@
         "@vitejs/plugin-react": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-query": "^3.39.3"
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.8.1"
     }
 }
