--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@glidejs/glide": "^3.6.0",
         "@vitejs/plugin-react": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
